--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,8 +5,8 @@
    <mat-card-content>
       <form class="my-form">
          <mat-form-field class="full-width">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="User ID" [(ngModel)]="emailId" name="emailId">
+            <mat-label>User ID</mat-label>
+            <input matInput placeholder="Email ID || Phone Number" [(ngModel)]="emailId" name="emailId">
          </mat-form-field>
          <mat-form-field class="full-width">
             <mat-label>Password</mat-label>
